[gd_scene load_steps=3 format=3 uid="uid://cti5lod6obcbo"]

[ext_resource type="Script" uid="uid://4f7yte427s10" path="res://scenes/main.gd" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://cys0wrhwurt0t" path="res://scenes/level.tscn" id="2_0wfyh"]

[node name="Main" type="Node"]
process_mode = 3
script = ExtResource("1_o5qli")
level = ExtResource("2_0wfyh")

[node name="GameLayer" type="CanvasLayer" parent="."]
process_mode = 1
follow_viewport_enabled = true

[node name="PauseMenuLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="PauseMenuLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -39.0
offset_right = 27.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenuLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuLayer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ButtonPlay" type="Button" parent="PauseMenuLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play New Game"

[node name="ButtonQuit" type="Button" parent="PauseMenuLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="PauseMenuLayer/PanelContainer/MarginContainer/VBoxContainer/ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="PauseMenuLayer/PanelContainer/MarginContainer/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
